功能：为 Hosts Monitor 应用程序添加主入口脚本
- 引入 `run.py` 作为 Hosts Monitor 应用程序的启动脚本。
- 将控制台输出编码设置为 UTF-8，以便更好地兼容中文。
- 将工作目录配置为脚本位置，以确保相对路径引用的一致性。
- 为模块导入和启动过程添加了错误处理。
- 提供用户友好的调试和错误报告消息。

--- a/技术文档.md
+++ b/技术文档.md
@@ -44,8 +44,8 @@ config:
 flowchart TD
  subgraph s1["当发生这些事件时"]
         n22["监控模块初始化完成"]
-        n23["新建/删除规则"]
-        n24["启用/禁用规则"]
+        n23["新建规则"]
+        n24["启用规则"]
         n25["编辑规则"]
         n26["hosts文件发生变化"]
   end
